src/objects/KS_Serie_Familia__c.object
<CustomObject>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Org_Ventas__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>---</fullName>
                </value>
                <value>
                    <fullName>C82</fullName>
                </value>
                <value>
                    <fullName>C87</fullName>
                </value>
                <value>
                    <fullName>C88</fullName>
                </value>
                <value>
                    <fullName>C89</fullName>
                </value>
                <value>
                    <fullName>C90</fullName>
                </value>
                <value>
                    <fullName>C91</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>F00</fullName>
                </value>
                <value>
                    <fullName>I00</fullName>
                </value>
                <value>
                    <fullName>S_C</fullName>
                </value>
                <value>
                    <fullName>S01</fullName>
                </value>
                <value>
                    <fullName>S02</fullName>
                </value>
                <value>
                    <fullName>S03</fullName>
                </value>
                <value>
                    <fullName>S05</fullName>
                </value>
                <value>
                    <fullName>S06</fullName>
                </value>
                <value>
                    <fullName>S07</fullName>
                </value>
                <value>
                    <fullName>S08</fullName>
                </value>
                <value>
                    <fullName>S10</fullName>
                </value>
                <value>
                    <fullName>S11</fullName>
                </value>
                <value>
                    <fullName>S12</fullName>
                </value>
                <value>
                    <fullName>S13</fullName>
                </value>
                <value>
                    <fullName>S14</fullName>
                </value>
                <value>
                    <fullName>S15</fullName>
                </value>
                <value>
                    <fullName>S16</fullName>
                </value>
                <value>
                    <fullName>S17</fullName>
                </value>
                <value>
                    <fullName>S18</fullName>
                </value>
                <value>
                    <fullName>S19</fullName>
                </value>
                <value>
                    <fullName>SEG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Org_Ventas__c</fullName>
        <label>Org. Ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI10</fullName>
                </value>
                <value>
                    <fullName>FL31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Familia__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C01</fullName>
                </value>
                <value>
                    <fullName>C05</fullName>
                </value>
                <value>
                    <fullName>C07</fullName>
                </value>
                <value>
                    <fullName>C10</fullName>
                </value>
                <value>
                    <fullName>C14</fullName>
                </value>
                <value>
                    <fullName>C15</fullName>
                </value>
                <value>
                    <fullName>C16</fullName>
                </value>
                <value>
                    <fullName>C17</fullName>
                </value>
                <value>
                    <fullName>C19</fullName>
                </value>
                <value>
                    <fullName>C21</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>F00</fullName>
                </value>
                <value>
                    <fullName>I10</fullName>
                </value>
                <value>
                    <fullName>I11</fullName>
                </value>
                <value>
                    <fullName>L05</fullName>
                </value>
                <value>
                    <fullName>L10</fullName>
                </value>
                <value>
                    <fullName>L11</fullName>
                </value>
                <value>
                    <fullName>L12</fullName>
                </value>
                <value>
                    <fullName>L14</fullName>
                </value>
                <value>
                    <fullName>L15</fullName>
                </value>
                <value>
                    <fullName>L61</fullName>
                </value>
                <value>
                    <fullName>L70</fullName>
                </value>
                <value>
                    <fullName>L71</fullName>
                </value>
                <value>
                    <fullName>LIN</fullName>
                </value>
                <value>
                    <fullName>M00</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>S_C</fullName>
                </value>
                <value>
                    <fullName>S00</fullName>
                </value>
                <value>
                    <fullName>S01</fullName>
                </value>
                <value>
                    <fullName>S02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Serie__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>C01</fullName>
                </value>
                <value>
                    <fullName>C02</fullName>
                </value>
                <value>
                    <fullName>C06</fullName>
                </value>
                <value>
                    <fullName>C10</fullName>
                </value>
                <value>
                    <fullName>C11</fullName>
                </value>
                <value>
                    <fullName>C14</fullName>
                </value>
                <value>
                    <fullName>C17</fullName>
                </value>
                <value>
                    <fullName>C18</fullName>
                </value>
                <value>
                    <fullName>C19</fullName>
                </value>
                <value>
                    <fullName>C21</fullName>
                </value>
                <value>
                    <fullName>C23</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>F00</fullName>
                </value>
                <value>
                    <fullName>F01</fullName>
                </value>
                <value>
                    <fullName>F02</fullName>
                </value>
                <value>
                    <fullName>F03</fullName>
                </value>
                <value>
                    <fullName>I00</fullName>
                </value>
                <value>
                    <fullName>I01</fullName>
                </value>
                <value>
                    <fullName>I02</fullName>
                </value>
                <value>
                    <fullName>I03</fullName>
                </value>
                <value>
                    <fullName>I04</fullName>
                </value>
                <value>
                    <fullName>I05</fullName>
                </value>
                <value>
                    <fullName>I06</fullName>
                </value>
                <value>
                    <fullName>I07</fullName>
                </value>
                <value>
                    <fullName>I08</fullName>
                </value>
                <value>
                    <fullName>I09</fullName>
                </value>
                <value>
                    <fullName>I11</fullName>
                </value>
                <value>
                    <fullName>I12</fullName>
                </value>
                <value>
                    <fullName>I13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Selección Serie</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Nombre de Selección Serie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selecciones Serie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>